@@ -194,6 +194,12 @@ channels[85] = "S28.2E-2-2408-4806";
 channelsnames[86] = "Nat Geo Wild (S)";
 channels[86] = "S28.2E-2-2408-4807";
 
+channelsnames[87] = "Real Time (S)";
+channels[87] = "S13.0E-64511-6200-10901";
+channelsnames[88] = "Real Time +1 (S)";
+channels[88] = "S13.0E-64511-11300-12268";
+
+
 channelsnames[100] = "Sky Premiere (S)";
 channels[100] = "S28.2E-2-2007-4404";
 channelsnames[101] = "Sky Prem+1 (S)";
@@ -220,7 +226,7 @@ channelsnames[111] = "Sky Disney (S)";
 channels[111] = "S28.2E-2-2007-4308";
 channelsnames[112] = "TCM (S)";
 channels[112] = "S28.2E-2-2403-6038";
-channelsnames[113] = "TCM 2 (S)";
+channelsnames[113] = "TCM +1 (S)";
 channels[113] = "S28.2E-2-2021-5522";
 channelsnames[114] = "Movies 24 (S)";
 channels[114] = "S28.2E-2-2303-52265";
@@ -448,7 +454,7 @@ channelsnames[310] = "Kix! (S)";
 channels[310] = "S28.2E-2-2314-53350";
 channelsnames[311] = "PopGirl (S)";
 channels[311] = "S28.2E-2-2314-53360";
-channelsnames[312] = "PopGirl +1 (S)";
+channelsnames[312] = "Kix! Power (S)";
 channels[312] = "S28.2E-2-2314-53370";
 channelsnames[313] = "NICK/CC AUT (S)";
 channels[313] = "S19.2E-133-7-61";
@@ -494,28 +500,34 @@ channelsnames[334] = "Disney Chnl (S)";
 channels[334] = "S28.2E-2-2051-9001";
 channelsnames[335] = "Disney Chnl+1 (S)";
 channels[335] = "S28.2E-2-2051-9007";
-channelsnames[336] = "Disney Cine (S)";
-channels[336] = "S28.2E-2-2051-9002";
-channelsnames[337] = "Disney Cine+1 (S)";
-channels[337] = "S28.2E-2-2051-9003";
+//channelsnames[336] = "Disney Cine (S)";
+//channels[336] = "S28.2E-2-2051-9002";
+//channelsnames[337] = "Disney Cine+1 (S)";
+//channels[337] = "S28.2E-2-2051-9003";
 channelsnames[338] = "Disney XD (S)";
 channels[338] = "S28.2E-2-2051-9011";
 channelsnames[339] = "Disney XD+1 (S)";
 channels[339] = "S28.2E-2-2051-9008";
 channelsnames[340] = "Nickelodeon (S)";
-channels[340] = "S28.2E-2-2004-4808";
-channelsnames[341] = "Nickelodeon (S)";
-channels[341] = "S28.2E-2-2604-54310";
-channelsnames[342] = "Nick Replay (S)";
-channels[342] = "S28.2E-2-2004-4809";
+channels[340] = "S28.2E-2-2052-5560";
+channelsnames[341] = "Nickelodeon+1 (S)";
+channels[341] = "S28.2E-2-2052-5561";
+//channelsnames[342] = "Nick Replay (S)";
+//channels[342] = "S28.2E-2-2004-4809";
 channelsnames[343] = "Nicktoons (S)";
-channels[343] = "S28.2E-2-2004-4810";
-channelsnames[344] = "N'toons Replay (S)";
-channels[344] = "S28.2E-2-2304-55251";
+channels[343] = "S28.2E-2-2052-5562";
+//channelsnames[344] = "N'toons Replay (S)";
+//channels[344] = "S28.2E-2-2304-55251";
 channelsnames[345] = "Cartoon I (S)";
 channels[345] = "S28.2E-2-2018-7109";
 channelsnames[346] = "Toonami I (S)";
 channels[346] = "S28.2E-2-2018-7108";
+channelsnames[347] = "Nickelodeon NL (S)";
+channels[347] = "S19.2E-1-1078-28679";
+channelsnames[348] = "Nicktoons (S) (S)";
+channels[348] = "S19.2E-1-1078-28682";
+
+
 
 channelsnames[401] = "Das Erste (S)";
 channels[401] = "S19.2E-1-1101-28106";
@@ -722,16 +734,16 @@ channels[525] = "S13.0E-318-1700-14002";
 channelsnames[526] = "RTS Deux (S)";
 channels[526] = "S13.0E-318-1700-14008";
 
-channelsnames[550] = "AD Sport 1 (S)";
-channels[550] = "S13.0E-318-15600-10716";
+//channelsnames[550] = "AD Sport 1 (S)";
+//channels[550] = "S13.0E-318-15600-10716";
 channelsnames[551] = "Dubai Sports 3 (S)";
 channels[551] = "S13.0E-318-5103-9502";
 channelsnames[552] = "Rai Sport 1 (S)";
 channels[552] = "S13.0E-318-5400-3305";
 channelsnames[553] = "Rai Sport 2 (S)";
 channels[553] = "S13.0E-318-5400-3301";
-channelsnames[554] = "BIKE SHOW TV (S)";
-channels[554] = "S13.0E-318-7200-7258";
+//channelsnames[554] = "BIKE SHOW TV (S)";
+//channels[554] = "S13.0E-318-7200-7258";
 channelsnames[555] = "Saudi Sports 1 (S)";
 channels[555] = "S13.0E-318-6500-498";
 channelsnames[556] = "Saudi Sport 2 (S)";
@@ -739,10 +751,10 @@ channels[556] = "S13.0E-318-7700-103";
 channelsnames[557] = "Saudi Arabian TV2 (S)";
 channels[557] = "S13.0E-318-7700-112";
 channelsnames[558] = "JSC Sports Global (S)";
-channels[558] = "S13.0E-318-7700-126";
+channels[558] = "S13.0E-318-500-8442";
 channelsnames[559] = "Eurosport Deutschland (S)";
 channels[559] = "S19.2E-1-1091-31200";
-channelsnames[560] = "e8 television (S)";
+channelsnames[560] = "equi8 (S)";
 channels[560] = "S19.2E-133-33-897";
 channelsnames[561] = "SPORT1 (S)";
 channels[561] = "S19.2E-133-33-900";
@@ -754,34 +766,34 @@ channelsnames[564] = "JSC Sports +3 (S)";
 channels[564] = "S13.0E-318-500-8439";
 channelsnames[565] = "JSC Sports +4 (S)";
 channels[565] = "S13.0E-318-500-8440";
-channelsnames[566] = "JSC Sports +5 (S)";
+channelsnames[566] = "JSC Sports News (S)";
 channels[566] = "S13.0E-318-500-8441";
-channelsnames[567] = "JSC Sports +6 (S)";
-channels[567] = "S13.0E-318-500-8442";
-channelsnames[568] = "JSC Sports +7 (S)";
-channels[568] = "S13.0E-318-500-8443";
-channelsnames[569] = "JSC Sports +8 (S)";
-channels[569] = "S13.0E-318-500-8444";
-channelsnames[570] = "JSC Sports +9 (S)";
-channels[570] = "S13.0E-318-500-8445";
-channelsnames[571] = "JSC Sports +10 (S)";
-channels[571] = "S13.0E-318-500-8446";
-channelsnames[572] = "JSC World Cup (S)";
-channels[572] = "S13.0E-318-500-8447";
+//channelsnames[567] = "JSC Sports +6 (S)";
+//channels[567] = "S13.0E-318-500-8442";
+//channelsnames[568] = "JSC Sports +7 (S)";
+//channels[568] = "S13.0E-318-500-8443";
+//channelsnames[569] = "JSC Sports +8 (S)";
+//channels[569] = "S13.0E-318-500-8444";
+//channelsnames[570] = "JSC Sports +9 (S)";
+//channels[570] = "S13.0E-318-500-8445";
+//channelsnames[571] = "JSC Sports +10 (S)";
+//channels[571] = "S13.0E-318-500-8446";
+//channelsnames[572] = "JSC World Cup (S)";
+//channels[572] = "S13.0E-318-500-8447";
 channelsnames[573] = "ESPN (S)";
-channels[573] = "S28.2E-2-2407-50650";
-channelsnames[574] = "ESPN America (S)";
-channels[574] = "S28.2E-2-2407-50620";
-channelsnames[575] = "ESPN Classic (S)";
-channels[575] = "S28.2E-2-2313-53205";
+channels[573] = "S28.2E-2-2404-50380";
+//channelsnames[574] = "ESPN America (S)";
+//channels[574] = "S28.2E-2-2407-50620";
+//channelsnames[575] = "ESPN Classic (S)";
+//channels[575] = "S28.2E-2-2313-53205";
 channelsnames[576] = "Eurosport (S)";
 channels[576] = "S28.2E-2-2030-6039";
 channelsnames[577] = "Eurosport 2 (S)";
 channels[577] = "S28.2E-2-2023-5009";
 channelsnames[578] = "Extreme Sports (S)";
-channels[578] = "S28.2E-2-2404-50350";
-channelsnames[579] = "Prem Spts Xtra (S)";
-channels[579] = "S28.2E-2-2412-51115";
+channels[578] = "S28.2E-2-2311-52080";
+//channelsnames[579] = "Prem Spts Xtra (S)";
+//channels[579] = "S28.2E-2-2412-51115";
 channelsnames[580] = "Premier Sports (S)";
 channels[580] = "S28.2E-2-2412-51113";
 channelsnames[581] = "Sky Sports 1 (S)";
@@ -795,9 +807,9 @@ channels[584] = "S28.2E-2-2023-5401";
 channelsnames[585] = "Sky Spts News (S)";
 channels[585] = "S28.2E-2-2023-4907";
 channelsnames[586] = "CANAL+ SPORT (S)";
-channels[586] = "S19.2E-1-1072-8208";
-channelsnames[587] = "SPORT+ (S)";
-channels[587] = "S19.2E-1-1070-8009";
+channels[586] = "S19.2E-1-1072-8224";
+channelsnames[587] = "InfoSport+ (S)";
+channels[587] = "S19.2E-1-1074-8307";
 channelsnames[588] = "ESP Int'l (S)";
 channels[588] = "S13.0E-318-200-13831";
 channelsnames[589] = "ESP Dutch (S)";
@@ -808,6 +820,8 @@ channelsnames[591] = "Fightbox (S)";
 channels[591] = "S13.0E-113-7400-7304";
 channelsnames[592] = "Sky Sport News (S)";
 channels[592] = "S19.2E-133-3-17";
+
+
 channelsnames[600] = "DELUXE MUSIC (S)";
 channels[600] = "S19.2E-133-7-65";
 channelsnames[601] = "Vintage TV (S)";
@@ -893,8 +907,8 @@ channelsnames[641] = "MTV MUSIC (S)";
 channels[641] = "S28.2E-2-2010-7012";
 channelsnames[642] = "MTV ROCKS (S)";
 channels[642] = "S28.2E-2-2010-7003";
-channelsnames[643] = "MTV Trax (S)";
-channels[643] = "S28.2E-2-2010-7021";
+//channelsnames[643] = "MTV Trax (S)";
+//channels[643] = "S28.2E-2-2010-7021";
 channelsnames[644] = "MTV+1 (S)";
 channels[644] = "S28.2E-2-2010-7005";
 channelsnames[645] = "VH1 (S)";
@@ -905,10 +919,6 @@ channelsnames[656] = "VIVA AUT (S)";
 channels[656] = "S19.2E-133-7-60";
 channelsnames[657] = "MTV Live (S)";
 channels[657] = "S28.2E-2-2409-50885";
-channelsnames[658] = "MTV NL (S)";
-channels[658] = "S19.2E-1-1078-28679";
-channelsnames[659] = "Nicktoons (S) (S)";
-channels[659] = "S19.2E-1-1078-28682";
 channelsnames[660] = "MTV Classic (S)";
 channels[660] = "S13.0E-64511-800-1427";
 channelsnames[661] = "MTV Music (S)";
@@ -940,35 +950,35 @@ channels[710] = "S19.2E-1-1022-6913";
 channelsnames[711] = "Arirang TV (S)";
 channels[711] = "S19.2E-1-1020-7011";
 channelsnames[712] = "CNC World (S)";
-channels[712] = "S28.2E-2-2404-50355";
+channels[712] = "S28.2E-2-2306-52580";
 channelsnames[713] = "PCNE Chinese (S)";
 channels[713] = "S28.2E-2-2409-50878";
-channelsnames[714] = "CCTV News (S)";
-channels[714] = "S28.2E-2-2411-51011";
-channelsnames[715] = "KBS_WORLD (S)";
-channels[715] = "S13.0E-318-15600-10709";
+//channelsnames[714] = "CCTV News (S)";
+//channels[714] = "S28.2E-2-2411-51011";
+//channelsnames[715] = "KBS_WORLD (S)";
+//channels[715] = "S13.0E-318-15600-10709";
 channelsnames[716] = "JSTV 1 (S)";
 channels[716] = "S13.0E-318-9400-8213";
 channelsnames[717] = "JSTV 2 (S)";
 channels[717] = "S13.0E-318-9400-8214";
 channelsnames[730] = "B4U Music (S)";
 channels[730] = "S28.2E-2-2302-52135";
-channelsnames[731] = "Music India (S)";
-channels[731] = "S28.2E-2-2611-55019";
+//channelsnames[731] = "Music India (S)";
+//channels[731] = "S28.2E-2-2611-55019";
 channelsnames[732] = "Rishtey (S)";
 channels[732] = "S28.2E-2-2304-55209";
-channelsnames[733] = "ARY World (S)";
-channels[733] = "S28.2E-2-2404-50310";
+//channelsnames[733] = "ARY World (S)";
+//channels[733] = "S28.2E-2-2404-50310";
 channelsnames[734] = "Aastha (S)";
 channels[734] = "S28.2E-2-2402-55500";
 channelsnames[735] = "Sangat (S)";
 channels[735] = "S28.2E-2-2612-9536";
-channelsnames[736] = "Sikh Channel (S)";
-channels[736] = "S28.2E-2-2407-50610";
+//channelsnames[736] = "Sikh Channel (S)";
+//channels[736] = "S28.2E-2-2407-50610";
 channelsnames[737] = "MATV National (S)";
 channels[737] = "S28.2E-2-2604-54300";
-channelsnames[738] = "AAJ TAK (S)";
-channels[738] = "S28.2E-2-2302-52159";
+//channelsnames[738] = "AAJ TAK (S)";
+//channels[738] = "S28.2E-2-2302-52159";
 channelsnames[739] = "Hidayat TV (S)";
 channels[739] = "S28.2E-2-2313-53290";
 channelsnames[740] = "ARY QTV (S)";
@@ -977,61 +987,61 @@ channelsnames[741] = "CHSTV (S)";
 channels[741] = "S28.2E-2-2601-54062";
 channelsnames[742] = "SONY SAB (S)";
 channels[742] = "S28.2E-2-2602-54107";
-channelsnames[743] = "Sahara One (S)";
-channels[743] = "S28.2E-2-2312-53113";
-channelsnames[744] = "ATN Bangla UK (S)";
-channels[744] = "S28.2E-2-2601-54053";
+//channelsnames[743] = "Sahara One (S)";
+//channels[743] = "S28.2E-2-2312-53113";
+//channelsnames[744] = "ATN Bangla UK (S)";
+//channels[744] = "S28.2E-2-2601-54053";
 channelsnames[745] = "Venus TV (S)";
 channels[745] = "S28.2E-2-2409-50884";
-channelsnames[746] = "Sonshine TV (S)";
-channels[746] = "S13.0E-318-9400-8206";
-channelsnames[747] = "Thendral (S)";
-channels[747] = "S13.0E-318-11100-4622";
-channelsnames[748] = "Ganj e Hozour TV (S)";
-channels[748] = "S13.0E-0-211034-17017";
-channelsnames[749] = "PTV Global (S)";
-channels[749] = "S28.2E-2-2312-53116";
+//channelsnames[746] = "Sonshine TV (S)";
+//channels[746] = "S13.0E-318-9400-8206";
+//channelsnames[747] = "Thendral (S)";
+//channels[747] = "S13.0E-318-11100-4622";
+//channelsnames[748] = "Ganj e Hozour TV (S)";
+//channels[748] = "S13.0E-0-211034-17017";
+//channelsnames[749] = "PTV Global (S)";
+//channels[749] = "S28.2E-2-2312-53116";
 channelsnames[750] = "Bangla TV (S)";
 channels[750] = "S28.2E-2-2602-54115";
-channelsnames[751] = "Channel i (S)";
-channels[751] = "S28.2E-2-2601-54068";
-channelsnames[752] = "CH NINE UK (S)";
-channels[752] = "S28.2E-2-2302-52166";
-channelsnames[753] = "SRI TV (S)";
+//channelsnames[751] = "Channel i (S)";
+//channels[751] = "S28.2E-2-2601-54068";
+//channelsnames[752] = "CH NINE UK (S)";
+//channels[752] = "S28.2E-2-2302-52166";
+channelsnames[753] = "Kurd Channel (S)";
 channels[753] = "S13.0E-318-15700-10645";
-channelsnames[754] = "SRI LANKA ONE (S)";
-channels[754] = "S13.0E-318-1400-1761";
+//channelsnames[754] = "SRI LANKA ONE (S)";
+//channels[754] = "S13.0E-318-1400-1761";
 channelsnames[755] = "DMC TV (S)";
 channels[755] = "S13.0E-318-12200-7459";
 channelsnames[756] = "B4U Movies (S)";
 channels[756] = "S28.2E-2-2302-52134";
 channelsnames[757] = "SONY TV Asia (S)";
 channels[757] = "S28.2E-2-2014-7420";
-channelsnames[758] = "NDTV 24x7 (S)";
-channels[758] = "S28.2E-2-2055-5021";
+//channelsnames[758] = "NDTV 24x7 (S)";
+//channels[758] = "S28.2E-2-2055-5021";
 channelsnames[759] = "COLORS (S)";
 channels[759] = "S28.2E-2-2306-52520";
 channelsnames[760] = "STAR Gold (S)";
 channels[760] = "S28.2E-2-2301-52113";
-channelsnames[761] = "ABP News (S)";
-channels[761] = "S28.2E-2-2604-54320";
+//channelsnames[761] = "ABP News (S)";
+//channels[761] = "S28.2E-2-2604-54320";
 channelsnames[762] = "Star Life OK (S)";
 channels[762] = "S28.2E-2-2304-55210";
 channelsnames[763] = "STAR Plus (S)";
 channels[763] = "S28.2E-2-2301-52108";
 channelsnames[764] = "Zee TV (S)";
 channels[764] = "S28.2E-2-2405-50460";
-channelsnames[765] = "Zee Café (S)";
+channelsnames[765] = "Lamhe (S)";
 channels[765] = "S28.2E-2-2405-50480";
 channelsnames[766] = "Zee Cinema (S)";
 channels[766] = "S28.2E-2-2405-50465";
 channelsnames[767] = "Zee Punjabi (S)";
 channels[767] = "S28.2E-2-2405-50475";
-channelsnames[768] = "Deepam TV (S)";
-channels[768] = "S13.0E-318-11100-4606";
-channelsnames[769] = "ZEE CINEMA (S)";
+//channelsnames[768] = "Deepam TV (S)";
+//channels[768] = "S13.0E-318-11100-4606";
+channelsnames[769] = "Face 1 (S)";
 channels[769] = "S13.0E-318-15700-10605";
-channelsnames[770] = "ZEE TV (S)";
+channelsnames[770] = "AAA Family/sports (S)";
 channels[770] = "S13.0E-318-15700-10604";
 channelsnames[771] = "AAG (S)";
 channels[771] = "S28.2E-2-2306-52505";
@@ -1201,12 +1211,13 @@ channelsnames[931] = "Russia Today (S)";
 channels[931] = "S19.2E-1-1022-6904";
 channelsnames[932] = "Russia Today Español (S)";
 channels[932] = "S19.2E-1-1026-10077";
+
 channelsnames[950] = "Travel Channel (S)";
 channels[950] = "S28.2E-2-2602-54102";
 channelsnames[951] = "Travel Ch +1 (S)";
 channels[951] = "S28.2E-2-2301-52100";
-channelsnames[952] = "Travel (S)";
-channels[952] = "S5.0E-1-1-287";
+//channelsnames[952] = "Travel (S)";
+//channels[952] = "S5.0E-1-1-287";
 channelsnames[953] = "Discovery Travel (S)";
 channels[953] = "S13.0E-64511-800-1410";
 channelsnames[954] = "Discovery Travel (S)";
